--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-/24-7.mp3
-/Afterglow.mp3
-/Anniversary.mp3
-/bat.ogg
-/Brinstar.mp3
-/catswing.ogg
-/Counting Down.mp3
-/darkzone.ogg
-/Essence.mp3
-/Flash.mp3
-/fromnowon.ogg
-/Impurity.mp3
-/In conclusion.mp3
-/test148.ogg
-/test230.ogg
-/third.ogg
-/tvtime.ogg
-/tvworld.ogg
-/White.mp3
+*.mp3
+*.ogg
